--- a/index.html
+++ b/index.html
@@ -1,33 +1,120 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="shortcut icon" href="assets/Favicon.jpeg" type="image/x-png">
     <link rel="stylesheet" href="style.css">
     <title>Rick and Morty</title>
 </head>
-<body>
-    <h1 class="titulo">Escolha um id e veja o personagem</h1>
+<body class="">
+  <header>
+    <nav class="navbar navbar-expand-lg" style="background: rgb(22, 23, 59);">
+      <div class="container-fluid">
+        <a class="navbar-brand navbar-titulo" href=""> <img src="assets/Rick.jpg" alt="">Rick and Morty</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarScroll">
+          <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#personagem">Personagem</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#episodio">Episódios</a>
+            </li>
+          </ul>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section id="personagem" class="secoes">
+      <h1 class="titulo">Escolha um id e veja o personagem</h1>
 
-    <form action="">
-        <input class="inputPersonagem" id="idPersonagem" type="number" placeholder="Digite um id"> <br>
-        <input id="enviaPersonagem" type="button" value="Buscar">
-    </form>
+      <form action="">
+          <input class="inputPersonagem" id="idPersonagem" type="number" placeholder="Digite um id"> <br>
+          <input id="enviaPersonagem" type="button" value="Buscar">
+      </form>
+  
+      <div class="card" style="width: 18rem;">
+          <img src="" class="card-img-top img-personagem" alt="">
+          <div class="card-body">
+            <h5 class="card-title titulo-personagem">Nome do personagem</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary gender-personagem">Gênero</h6>
+            <p class="card-text episodes-personagem">Quantos episódios já apareceu: ?</p>
+            <div class="card-descricao">
+              <p class="card-link status-personagem">Estados</p>
+              <p>-</p>
+              <p class="card-link specie-personagem">Espécie</p>
+            </div>
+          </div>
+      </div>
+    </section>
 
-    <div class="card" style="width: 18rem;">
-        <img src="" class="card-img-top img-personagem" alt="">
-        <div class="card-body">
-          <h5 class="card-title titulo-personagem">Nome do personagem</h5>
-          <h6 class="card-subtitle mb-2 text-body-secondary gender-personagem">Genêro</h6>
-          <p class="card-text episodes-personagem">Quantos episódios já apareceu: ?</p>
-          <div class="card-descricao">
-            <p class="card-link status-personagem">Estados</p>
-            <p>-</p>
-            <p class="card-link specie-personagem">Espécie</p>
+    <hr>
+
+    <section class="secoes secao-destacados">
+      <div class="container-destacados">
+        <h1>Nunca assistiu Rick and Morty?</h1>
+        <p>Veja alguns dos personagens</p>
+      </div>
+      <div class="container text-center">
+        <div class="row">
+          <div class="col">
+            <img class="personagensDestacados" id="personagem1"  src="" alt="">
+          </div>
+          <div class="col">
+            <img class="personagensDestacados" id="personagem2"  src="" alt="">
           </div>
         </div>
-    </div>
+        <div class="row">
+          <div class="col">
+            <img class="personagensSubDestacados" id="personagem3"  src="" alt="">
+          </div>
+          <div class="col">
+            <img class="personagensSubDestacados" id="personagem4"  src="" alt="">
+          </div>
+          <div class="col">
+            <img class="personagensSubDestacados" id="personagem5"  src="" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <hr>
+
+    <section id="episodio" class="secoes">
+      <div class="card text-center">
+        <div class="card-header">
+          Episódios
+        </div>
+        <div class="card-footer text-body-secondary">
+          <form class="form-episodio">
+          <input class="inputEpisodio" id="idEpisodio" type="number" placeholder="Digite um id"> <br>
+          <input id="enviaEpisodio" type="button" value="Buscar">
+        </form>
+        </div>
+        <div class="card-footer text-body-secondary sequencia-episodio">
+          Qual é esse episódio?
+        </div>
+        <div class="card-body">
+          <h5 class="card-title titulo-episodio">Titulo do episódio</h5>
+          <p class="card-text personagens-episodio">Quantos personages aparecem no episódio</p>
+        </div>
+        
+        <div class="card-body">
+          <h5>Lista de personagens:</h5>
+          <div class="lista-personagens">
+          </div>
+        </div>
+        <div class="card-footer text-body-secondary data-episodio">
+          Data do episódio
+        </div>
+      </div>
+    </section>
+  </main>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
